# Math

./: CMakeLists.txt
Math/: main.cpp  object.cpp  object.h
Math/Geometry/: line.cpp  line.h  point.cpp  point.h
Package/Include/glad/: glad.c  glad.h
Package/Lib/Debug/: fmtd.lib
YSPMath/: YSPMath.sln  YSPMath.vcxproj  YSPMath.vcxproj.filters  define.h  main.cpp  object.cpp  object.h  util.cpp  util.h
YSPMath/Math/Geometry/: degrees.cpp  degrees.h  line.cpp  line.h  point.cpp  point.h  round.cpp  round.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  vector.cpp  vector.h
YSPMath/Visualization/: glwindow.cpp  glwindow.h  processbuild.h
YSPMath/Visualization/Geometry/: camera.cpp  camera.h  data.h  model.cpp  model.h  scene.cpp  scene.h
YSPMath/Visualization/Shader/: shader.cpp  shader.h  strshader.cpp  strshader.h
YSPMath/Visualization/UI/: style.h  ui.cpp  ui.h
